# ExtratorGabarito

./: .env.example  .gitignore  AGENTS.md  MILESTONES.md  README.md  codigo_julia.py  extrair_table_fixed.py  extrair_table_profiling.py  main.py  objetivos.txt  pyproject.toml  requirements.txt
.bob/notes/: pending-notes.txt
archive/: coordenadas_bolinhas.json  determinar_coord_manual.py  extrair_param_personalizado.py
chest/: coordenadas_nomes.json
